force-app/main/default/objects/Opportunity_Partner__c/Opportunity_Partner__c.object-meta.xml
<CustomObject>
    <label>Opportunity Partner</label>
    <nameField>
        <displayFormat>OP-{0}</displayFormat>
        <label>Opportunity Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>