force-app/main/default/objects/Opportunity_Partner__c/fields/Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup__c</fullName>
    <formula>Partner_Contact__r.Spiff_Eligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Spiff Eligible</label>
    <type>Checkbox</type>
</CustomField>