force-app/main/default/objects/Opportunity_Partner__c/fields/Facility_City__c.field-meta.xml
<CustomField>
    <fullName>Facility_City__c</fullName>
    <formula>Partner__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility City</label>
    <type>Text</type>
</CustomField>