force-app/main/default/objects/Opportunity_Partner__c/fields/Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Facility_State__c</fullName>
    <formula>Partner__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility State</label>
    <type>Text</type>
</CustomField>