force-app/main/default/objects/Opportunity_Partner__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <formula>Opportunity__r.Account.Market_Segments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>