force-app/main/default/objects/Opportunity_Partner__c/fields/Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>