force-app/main/default/objects/Opportunity_Partner__c/fields/Partner_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Email__c</fullName>
    <formula>Partner_Contact__r.Email</formula>
    <label>Partner Contact Email</label>
    <type>Text</type>
</CustomField>