force-app/main/default/objects/Opportunity_Partner__c/fields/Partner_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Id__c</fullName>
    <formula>Partner_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Contact Id</label>
    <type>Text</type>
</CustomField>